<resources>
    <string name="app_name">ProjetSuiviStage</string>
    <string name="title">Gestionnaire de stage</string>
    <string name="eleves">Élèves</string>
    <string name="prof">Professeurs</string>
    <string name="btn_retour">Retour</string>
    <string name="btn_valider">Valider</string>
    <string name="titre_page_info_stg">Informations Stagiaire</string>
    <string name="info_tuteur_etablissement">Informations tuteur établissement</string>
    <string name="nom">\nNom :</string>
    <string name="mail">\nMail :</string>
    <string name="date_visite">\nDate de la visite :</string>
    <string name="divers">\nDivers :</string>
    <string name="info_tuteur_entr">Informations tuteur entreprise</string>
    <string name="tel">\nTéléphone :</string>

    <string name="StringBilanStage">Bilan stage</string>
    <string name="TextViewConditionsStage">Condition du stage</string>
    <string name="TextViewBilanTravaux">Bilan des travaux réalisés</string>
    <string name="TextViewRessources">Ressources et outils utilisés</string>
    <string name="TextViewCommentaires">Commentaires et appréciation générale</string>
    <string name="nom_stg">Nom</string>
    <string name="prenom_stg">Prénom</string>
    <string name="anne_stg">Année</string>
    <string name="classe_stg">Classe</string>
    <string name="spe_stg">Spécialité</string>
    <string name="radio_btn_slam">SLAM</string>
    <string name="radio_btn_sisr">SISR</string>
    <string name="titre_page_avis">Avis maître de stage</string>
    <string name="text_parcours_pro">Participation du maître de stage à l\'épreuve orale "Parcours de professionnalisation :</string>
    <string name="text_opportunite">Opportunité de stage :</string>
    <string name="text_date_stage">Si oui :</string>
    <string name="radio_btn_oui">Oui</string>
    <string name="radio_btn_non">Non</string>
    <string name="checkbox_date_mai_juin">Mai-Juin 2021</string>
    <string name="checkbox_date_janvier_fevrier">Janvier-Février 2022</string>

    <string name="btn_annuler">Annuler</string>
</resources>