<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textInfoStg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_page_info_stg"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textNomStg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom_stg"
            android:layout_marginTop="25dp"/>


        <EditText
            android:id="@+id/editNomStg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/nom_stg"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textPrenomStg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prenom_stg"
            android:layout_marginTop="25dp"/>


        <EditText
            android:id="@+id/editPrenomStg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/prenom_stg"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textAnneeStg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anne_stg"
            android:layout_marginTop="25dp"/>


        <EditText
            android:id="@+id/editAnneeStg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/anne_stg"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textSpeStg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spe_stg"
            android:layout_marginTop="25dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonSlam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_slam" />

            <RadioButton
                android:id="@+id/radioButtonSisr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/radio_btn_sisr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="65dp">

            <Button
                android:id="@+id/btnAnnulerNewR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_retour" />

            <Button
                android:id="@+id/btnValiderNewR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_valider" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>