<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textAvis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_page_avis"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textParcours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_parcours_pro"
            android:layout_marginTop="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/radioButtonOuiParticipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_btn_oui" />

                <RadioButton
                    android:id="@+id/radioButtonNonParticipe"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/radio_btn_non" />
            </RadioGroup>

        </LinearLayout>


        <TextView
            android:id="@+id/textOpportunité"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_opportunite"
            android:layout_marginTop="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/radioButtonOuiOpportunite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_btn_oui" />

                <RadioButton
                    android:id="@+id/radioButtonNonOpportunite"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/radio_btn_non" />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/textDateStage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_date_stage"
            android:layout_marginTop="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkboxMaiJuin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_date_mai_juin" />

            <CheckBox
                android:id="@+id/checkboxJanvierFevrier"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/checkbox_date_janvier_fevrier" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="195dp">

            <Button
                android:id="@+id/btnAnnulerAvis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_retour" />

            <Button
                android:id="@+id/btnValiderAvis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_valider" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>