<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewBilanStage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StringBilanStage"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/textViewConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewConditionsStage"
            android:layout_marginTop="25dp"/>

        <EditText
            android:id="@+id/editTextConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="500"
            android:minHeight="25dp" />

        <TextView
            android:id="@+id/textViewBilanTravaux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewBilanTravaux"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextBilanTravaux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="500"
            android:minHeight="25dp" />
        <TextView
            android:id="@+id/textViewRessources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewRessources"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextRessources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="500"
            android:minHeight="25dp" />

        <TextView
            android:id="@+id/textViewCommentaires"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextViewCommentaires"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextCommentaires"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="500"
            android:minHeight="25dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="35dp">

            <Button

                android:id="@+id/btnAnnulerBilan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_retour" />

            <Button

                android:id="@+id/btnValiderBilan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_valider" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>