<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewTitleTuteur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/title"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewTuteurEcole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_tuteur_etablissement"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNomTuteurEcole"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="@string/nom"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/editTextNomTuteurEcole"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""


                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewMailTuteurEcole"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="@string/mail"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/editTextMailTuteurEcole"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDateVisite"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="@string/date_visite"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/editTextDateVisite"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDivers"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="@string/divers"
                    android:textAlignment="center"
                    />

                <EditText
                    android:id="@+id/editTextDivers"
                    android:layout_width="wrap_content"
                    android:layout_height="150px"
                    android:ems="10"
                    android:text=""
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLength="500"
                    android:minHeight="25dp"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="120px"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewTuteurEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_tuteur_entr"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNomTuteurEts"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="@string/nom"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/editTextNomTuteurEts"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTuteurEts"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="@string/tel"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/editTextTuteurTelEts"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTuteurMailEts"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:text="@string/mail"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/editTextTuteurMailEts"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">


            <Button
                android:id="@+id/btnAnnulerInfoTuteur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_retour" />

            <Button
                android:id="@+id/btnValiderInfoTuteur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_valider" />

        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>